--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         <span>期望职位：前端开发工程师</span>
                     </em>
                     <em>
-                        <span>期望薪资：12k</span>
+                        <span>期望薪资：9k-12k</span>
                     </em>
                     <em>
                         <span>工作地点：北京</span>
@@ -95,11 +95,12 @@
                     <span>技能 ★★★★★</span>
                     <span><b>原生JS : </b> ★★★★★</span>
                     <span><b>jQuery : </b> ★★★★★</span>
-                    <span><b>HTML5 : </b> ★★★★★</span>
-                    <span><b>NODE : </b> ★★★★</span>
-                    <span><b>AJAX : </b> ★★★★</span>
-                    <span><b>angular : </b> ★★★ </span>
-                    <span><b>bootstrap : </b> ★★★ </span>
+                    <span><b>HTML5/CSS3 : </b> ★★★★★</span>
+                    <span><b>AJAX/JSONP : </b> ★★★★</span>
+                    <span><b>angular/React : </b> ★★★ </span>
+                    <span><b>Zepto/Less/bootstrap : </b> ★★★ </span>
+                    <span><b>gulp/webpack : </b> ★★★ </span>
+                    <span><b>NODE : </b> ★★★</span>
                     <i id="next"></i>
                 </div>
 
@@ -111,10 +112,14 @@
                 <div class="exper" id="exper">
                     <span>WORK EXPERIENCE </span>
                     <span>工作经历</span>
-                    <span><b>2014-2015：</b>北京xxx公司 </span>
-                    <p><em>工作内容：</em></p>
-                    <span><b>2015-2016：</b>北京xxx公司 </span>
-                    <p><em>工作内容:</em></p>
+                    <span><b>2016.3-今：</b>北京小能科技有限公司 </span>
+                    <p><em>工作内容：</em>1、公司主要业务：为客户提供在线客服系统
+                        2、工作内容：web版客服系统咨询窗口的开发和维护；主要jQuery实现页面的开发，利用AJAX/JSONP实现前后端交互；使用gulp进行项目打包等；
+                        3、离职原因：公司内部技术部门变化，个人更想找到一个有长期发展机会的工作</p>
+                    <span><b>2014.3-2016.3：</b>三五互联科技股份有限公司 </span>
+                    <p><em>工作内容:</em>1、公司主要业务：为客户提供网页制作、邮箱、OA租用等业务
+                        2、工作内容：参与整个网站的设计风格定位；和UI设计师进行沟通，确定设计图上的每一个细节以及效果；协助后台完成代码上传，网站测试工作等；定期会做一些页面优化，给客户良好的体验感；
+                        3、离职原因：个人自学了前端课程，对自己的职业规划有了新的认识；</p>
                     <i id="next1"></i>
                 </div>
                 <span class="bottom"></span>
@@ -140,7 +145,9 @@
                 <img src="img/icon/right.png" alt="">
                 <div class="cen">
                     <img src="img/icon/cen.png" alt="">
-                    <p>工作认真负责、积极主动、注重协作，善于团队工作，适应能力强...</p>
+                    <p>1、工作积极向上，抗压能力强，善于团队合作
+                        2、敢于面对挑战，对于新的事物接受能力快，善于学习
+                        3、乐观开朗，可以给团队带来积极的</p>
                 </div>
 
 
