--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                     <img src="img/icon/cen.png" alt="">
                     <p>1、工作积极向上，抗压能力强，善于团队合作
                         2、敢于面对挑战，对于新的事物接受能力快，善于学习
-                        3、乐观开朗，可以给团队带来积极的</p>
+                        3、乐观开朗，可以给团队带来积极的氛围</p>
                 </div>
 
 
